[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/Player/Player/Magic.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Particles/dust.png" type="Texture" id=2]
[ext_resource path="res://World/Player/Player/AttachedScenes/AimDownSightLine.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/Magic/aim line.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/dust.png-7ebb2e5fde40d0b06570139632aad9e2.stex"

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Magic" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AimDownSightLine" parent="." instance=ExtResource( 3 )]
width = 4.0
default_color = Color( 1.2, 1.2, 1.2, 1 )
texture = ExtResource( 4 )
texture_mode = 1

[node name="CastDirection" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="Position2D" type="Position2D" parent="CastDirection"]
position = Vector2( 40, -7.62939e-06 )

[node name="Tween" type="Tween" parent="."]

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="DustParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
material = SubResource( 1 )
z_index = -1
emitting = false
amount = 16
lifetime = 1.2
explosiveness = 0.5
lifetime_randomness = 0.7
local_coords = false
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
angle = 360.0
angle_random = 0.15
scale_amount = 2.4
scale_amount_random = 1.0
color_ramp = SubResource( 2 )
anim_speed_curve = SubResource( 3 )

[node name="DustBurst" type="CPUParticles2D" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
material = SubResource( 4 )
z_index = -1
emitting = false
amount = 24
lifetime = 1.5
explosiveness = 0.95
lifetime_randomness = 0.7
local_coords = false
texture = SubResource( 5 )
emission_shape = 1
emission_sphere_radius = 6.0
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 35.0
angle = 360.0
angle_random = 0.15
scale_amount = 2.4
scale_amount_random = 1.0
color_ramp = SubResource( 6 )
anim_speed_curve = SubResource( 7 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]

[editable path="AimDownSightLine"]
